Fix search empty state message alignment

--- a/frontend/src/components/SearchEmptyState/SearchEmptyState.module.scss
+++ b/frontend/src/components/SearchEmptyState/SearchEmptyState.module.scss
@@ -23,12 +23,9 @@
 }
 
 .emptySubTitle {
-    align-items: center;
     color: var(--color-gray-500);
-    display: flex;
-    justify-content: center;
     margin: 0 auto !important;
-    max-width: 450px;
+    max-width: 350px;
     text-align: center;
 }
 
